environments/prod/kubernetes/services/ops/internal-support-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-support-manager
  labels:
    app: internal-support-manager
    env: prod
  namespace: ops
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      name: internal-support-manager
      labels:
        app: internal-support-manager
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: internal-support-manager
          image: steblynskyi-docker.jfrog.io/ops-internal-support-manager:6df352b
          imagePullPolicy: Always
#          Uncomment this section if app has health check endpoint
#          livenessProbe:
#            failureThreshold: 3
#            httpGet:
#              port: http
#              scheme: HTTP
#            initialDelaySeconds: 20
#            periodSeconds: 10
#            successThreshold: 1
#            timeoutSeconds: 5
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
          ports:
            - containerPort: 80
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: internal-support-manager
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: internal-support-manager
  namespace: ops
  labels:
    Domain: itsupport.steblynskyi.com
spec:
  selector:
    app: internal-support-manager
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
  type: NodePort
