environments/prod/kubernetes/services/ops/interview-management-system-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interview-management-system-v2
  labels:
    app: interview-management-system-v2
    env: prod
  namespace: ops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: interview-management-system-v2
  revisionHistoryLimit: 1
  template:
    metadata:
      name: interview-management-system-v2
      labels:
        app: interview-management-system-v2
        env: prod
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: interview-management-system-v2
          image: steblynskyi-docker.jfrog.io/ops-interview-management-system-v2:fd3307a
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 5000
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: interview-management-system-v2
  namespace: ops
  labels:
    Domain: ops-interview-management-system-v2.steblynskyi.com
spec:
  selector:
    app: interview-management-system-v2
    env: prod
  ports:
    - port: 80
      name: http
      targetPort: 5000
      protocol: TCP
  type: NodePort
