environments/prod/kubernetes/services/ops/production-support-tools-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production-support-tools-api
  labels:
    app: production-support-tools-api
    env: prod
  namespace: ops
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      name: production-support-tools-api
      labels:
        app: production-support-tools-api
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: production-support-tools-api
          image: steblynskyi-docker.jfrog.io/ops-production-support-tools-api:6c90782
          imagePullPolicy: Always
#          Uncomment this section if app has health check endpoint
#          livenessProbe:
#            failureThreshold: 3
#            httpGet:
#              port: http
#              scheme: HTTP
#            initialDelaySeconds: 20
#            periodSeconds: 10
#            successThreshold: 1
#            timeoutSeconds: 5
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
          ports:
            - containerPort: 80
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: production-support-tools-api
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: production-support-tools-api
  namespace: ops
  labels:
    Domain: ops-production-support-tools-api.steblynskyi.com
spec:
  selector:
    app: production-support-tools-api
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
  type: NodePort
