environments/prod/kubernetes/services/ops/OPS-INGRESS-GLOBAL.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ops-ingress-global
  namespace: ops
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=PROD,Name=OPS-Ingress-Gloabal
    alb.ingress.kubernetes.io/subnets: subnet-1,subnet-2,subnet-3
    alb.ingress.kubernetes.io/security-groups: sg-1
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:123:certificate/111-222-333-444-555,arn:aws:acm:us-east-1:123:certificate/a21e50c9-56fd-438d-ba15-7e84db019a25
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=false,access_logs.s3.bucket=steblynskyi-prod-kube-ingress-controller-logs,access_logs.s3.prefix=ops,deletion_protection.enabled=true,routing.http2.enabled=true,idle_timeout.timeout_seconds=2000
spec:
  rules:
  - host: ops-database-api.steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: database-api
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: ops-production-support-tools-web.steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: production-support-tools-web
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: itsupport.steblynskyi.com
    http:
      paths:
      - backend:
            service:
              name: internal-support-manager
              port:
                number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: ops-production-support-tools-api.steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: production-support-tools-api
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: ops-production-support-tools-ui.steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: production-support-tools-ui
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: ops-review-management.steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: review-management
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: hiring.steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: interview-management-system-v2
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
